--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "Synced GMap",
+  "name": "synced-gmap",
   "description": "a really cool app",
   "version": "1.0.0",
   "engines": {
     "node": "6.9.1"
+  },
+  "scripts": {
+    "start": "node hello.js"
+  },
+  "dependencies": {
+    "gun": "^0.7.9"
   }
 }
